Sat Jun 12 23:10:39 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.h: Fix thinkos introduced in change earlier
	today. Actually compiles correctly now.

Sat Jun 12 22:37:22 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HtHTTP.cc (ParseHeader): Fix parsing to take empty headers
	into account. Fixes PR#557.

	* htsearch/Display.h, htsearch/Display.cc (excerpt): Fix
	declaration to refer to first as reference--ensures ANCHOR is
	properly set. Fixes PR#541 as suggested by <pmb1@york.ac.uk>.

	* htfuzzy/Endings.cc (getWords): Fixed PR#560 as suggested by
	Steve Arlow <yorick@ClarkHill.com>. Solves problems with fuzzy
	matching on words like -ness: witness, highness, likeness...

	* installdir/search.html (Match): Add Boolean to default search
	form, as suggested by PR#561.

	* htlib/URL.cc (URL): Fix PR#566 by setting the correct length of
	the string being matched. 'http://' is 7 characters...

Sat Jun 12 19:06:36 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtZlibCodec.h, htlib/HtZlibCodec.cc: New files. Provide
	general access to zlib compression routines when available.

	* htcommon/DocumentRef.h, htcommon/DocumentRef.cc: Remove
	compression access and restore DocHead access through default
	methods. Compression of excerpts will occur through the
	HtZlibCodec classes and through the DocumentDB excerpt access.
	
Sat Jun 12 15:25:08 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htmerge/docs.cc (convertDocs): Load excerpt from external
	database before considering it empty.

Sat Jun 12 14:41:54 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc (displayMatch): Added patch from Torsten
	Neuer <tneuer@inwise.de> to fix PR# 554.

	* htdig/HTML.cc (do_tag): Add parsing for <embed> and <object>,
	including suggestions from Gilles as to condensing cases with
	<img> parsing.

Sat Jun 12 14:00:39 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
